# ready

./: .gitmodules  CMakeLists.txt  README.md
cgra_runtime/: CMakeLists.txt
cgra_runtime/include/: cgra_exec.h
cgra_runtime/src/: cgra_exec.cpp
hw/src/: create_ready_cgra_project.py  make_cgra.py  make_cgra_accelerator.py  make_omega.py  make_pe.py  make_swicth_conf_control.py  make_switch_box.py  utils.py
hw/template/hw/sim/: setup_ase
hw/template/hw/synth/: setup_synth
hw/template/sw/: CMakeLists.txt
hw/template/sw/include/: main.h
samples/cgra_128_8_16/CPP/sw/: out.txt  out_128M.txt  out_1G.txt  results.txt  run.sh
samples/cgra_128_8_16/CPP/sw/Chebyshev/: chebyshev.cpp  chebyshev.h
samples/cgra_128_8_16/CPP/sw/Fir/: CMakeLists.txt
samples/cgra_128_8_16/CPP/sw/Kmeans/: kmeans.cpp  kmeans.h
samples/cgra_128_8_16/CPP/sw/Loopback/: CMakeLists.txt
samples/cgra_128_8_16/CPP/sw/Mibench/: mibench.cpp
samples/cgra_128_8_16/CPP/sw/Paeth/: CMakeLists.txt  paeth.cpp  paeth.h
samples/cgra_128_8_16/CPP/sw/Qspline/: CMakeLists.txt
samples/cgra_128_8_16/CPP/sw/SobelFilter/: sobel_filter.cpp  sobel_filter.h
samples/cgra_128_8_16/JSON/Fir/: fir.json  input_data.json  output_data.json  output_data_cgra.json  output_data_cpu.json
samples/cgra_128_8_16/JSON/Kmeans/: input_data4x4.json  input_data8x5.json  kmeans3x4.json  kmeans4x4.json  kmeans8x5.json  output_data.json  output_data3x4.json  output_data4x4.json  output_data8x5.json  output_data8x5_cgra.json  output_data8x5_cpu.json
samples/cgra_128_8_16/JSON/Paeth/: input_data.json  output_data.json  output_data_cgra.json  output_data_cpu.json  paeth.json
samples/cgra_128_8_16/JSON/SobelFilter/: cgra_arch.json  output_data.json  output_data_cgra.json  output_data_cpu.json  sobel.json
samples/cgra_128_8_16/JSON/sw/Chebyshev/: CMakeLists.txt  chebyshev.cpp
samples/cgra_128_8_16/JSON/sw/Fir/: fir.h
samples/cgra_128_8_16/JSON/sw/Kmeans/: CMakeLists.txt  kmeans.cpp
samples/cgra_128_8_16/JSON/sw/Poly5/: CMakeLists.txt
samples/cgra_128_8_16/JSON/sw/Poly6/: CMakeLists.txt  poly6.h
samples/cgra_128_8_16/JSON/sw/Poly8/: poly8.cpp  poly8.h
samples/cgra_128_8_16/JSON/sw/Qspline/: qspline.h
samples/cgra_128_8_16/JSON/sw/Sgfilter/: CMakeLists.txt  sgfilter.cpp
samples/cgra_128_8_16/JSON/sw/SobelFilter/: CMakeLists.txt
samples/cgra_128_8_16/hw/rtl/acc0/: cgra0_acc.v  cgra0_conf_reader_pe.v  cgra0_control_conf.v  cgra0_control_exec.v  cgra0_pe.v  cgra0_pe_in.v  cgra0_pe_out.v  cgra0_top.v
samples/cgra_128_8_16/hw/rtl/common/: omega256x256_8_0_1.v  omega256x256_8_1_1.v  omega_branch128x128_8_0_1.v  omega_branch128x128_8_1_1.v  swicth_conf_control_24_1.v  swicth_conf_control_branch_24_1.v  swicth_conf_reader_24_1.v  swicth_conf_reader_branch_24_1.v  thread_counter_7.v
samples/cgra_128_8_16/hw/sim/: sources.txt
samples/cgra_128_8_16/sw/: results.txt  run.sh
samples/cgra_128_8_16/sw/Chebyshev/: CMakeLists.txt  cgra_arch.json  chebyshev.cpp  chebyshev.h  chebyshev.json  input_data.json  output_data.json
samples/cgra_128_8_16/sw/Fir/: CMakeLists.txt  fir.cpp  fir.h  output_data.json
samples/cgra_128_8_16/sw/Kmeans/: CMakeLists.txt  input_data.json  kmeans.cpp  kmeans.dot  kmeans.h  kmeans.json  output_data.json
samples/cgra_128_8_16/sw/Loopback/: CMakeLists.txt  loopback.cpp  loopback.h
samples/cgra_128_8_16/sw/Mibench/: CMakeLists.txt  mibench.cpp  mibench.h
samples/cgra_128_8_16/sw/Paeth/: CMakeLists.txt  output_data.json  paeth.cpp  paeth.h  paeth.json
samples/cgra_128_8_16/sw/Poly5/: CMakeLists.txt  poly5.cpp  poly5.h
samples/cgra_128_8_16/sw/Poly6/: CMakeLists.txt  poly6.cpp  poly6.h
samples/cgra_128_8_16/sw/Poly8/: CMakeLists.txt  poly8.cpp  poly8.h
samples/cgra_128_8_16/sw/Qspline/: CMakeLists.txt  qspline.cpp  qspline.h
samples/cgra_128_8_16/sw/Sgfilter/: CMakeLists.txt  sgfilter.cpp  sgfilter.h
samples/cgra_128_8_16/sw/SobelFilter/: CMakeLists.txt  input_data.json  output_data.json  sobel.json  sobel_filter.cpp  sobel_filter.h
samples/cgra_4_1_32/CPP/sw/src/: main.cpp
samples/cgra_4_1_32/JSON/: cgra_arch.json  loopback.json  output_data.json
samples/cgra_4_1_32/hw/rtl/acc0/: cgra0_acc.v  cgra0_conf_reader_pe.v  cgra0_pe.v  cgra0_pe_in.v  cgra0_pe_out.v  cgra0_top.v
samples/cgra_4_1_32/hw/rtl/acc_mnt/: fdam_acc_user_0.v  fdam_accelerator_0.v  fdam_arbiter_controller_rd_req_1.v  fdam_arbiter_controller_rd_req_tree_1.v  fdam_arbiter_controller_wr_req_tree_2.v
samples/cgra_4_1_32/hw/rtl/base/: afu.json
samples/cgra_4_1_32/hw/rtl/common/: omega8x8_2_0_1.v  reg_tree_4_1_4.v  swicth_conf_control_2_1.v  swicth_conf_reader_2_1.v  switch_box2x2.v
samples/cgra_4_1_32/hw/sim/: sources.txt
samples/cgra_4_1_32/sw/: CMakeLists.txt
samples/cgra_4_1_32/sw/include/: main.h
samples/cgra_4_1_32/sw/src/: main.cpp
samples/runtime/: CMakeLists.txt  data_out_cpu.json
samples/runtime/include/: cgra_exec.h
samples/runtime/src/: cgra_exec.cpp
samples/test/hw/rtl/acc0/: cgra0_acc.v  cgra0_control_conf.v  cgra0_control_exec.v  cgra0_pe_out.v  cgra0_top.v
samples/test/hw/rtl/acc_mnt/: fdam_acc_management.v  fdam_dsm_controller.v
samples/test/hw/rtl/common/: mux7x1.v  omega_branch4x4_2_1_1.v  program_counter_1.v  reg_tree_4_4_2.v  reg_tree_4_7_2.v  swicth_conf_control_branch_2_1.v  swicth_conf_reader_branch_2_1.v
scripts/: create_ready_cgra_project.sh  install.sh  setup.ready
sw/: CMakeLists.txt
sw/include/ready/: abs.h  add.h  and.h  beq.h  bne.h  cgra.h  cgra_arch.h  cgra_defs.h  data_flow.h  data_flow_defs.h  global.h  input_stream.h  max.h  min.h  mult.h  mux.h  not.h  omega.h  operator.h  operator_factory.h  or.h  output_stream.h  params.h  pass_a.h  pass_b.h  path_finder.h  pe_arch.h  ready.h  scheduler.h  scheduler_defs.h  sgt.h  shl.h  shr.h  slt.h  sub.h  switch.h  xor.h
sw/src/: cgra.cpp  cgra_arch.cpp  data_flow.cpp  global.cpp  omega.cpp  operator.cpp  operator_factory.cpp  path_finder.cpp  pe_arch.cpp  scheduler.cpp  switch.cpp
