cmake_minimum_required(VERSION 3.16)
project(ready)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(fdam/hw/template/sw/cpp/include)
include_directories(fdam/intel-fpga-bbb/BBB_cci_gemm/base/sw)
include_directories(fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib)
include_directories(fdam/intel-fpga-bbb/BBB_cci_gemm/sw/sample)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/hw)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/hw/rtl)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/hw/rtl/cci-if)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/aalsdk)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/aalsdk/mpf)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/cxx)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/base/sw)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_cci_mpf_null/sw)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_mem_perf/sw)
include_directories(fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_random/sw)
include_directories(fdam/intel-fpga-bbb/samples/tutorial/base/sw)
include_directories(fdam/opae-sdk/ase/api/src)
include_directories(fdam/opae-sdk/ase/sw)
include_directories(fdam/opae-sdk/common)
include_directories(fdam/opae-sdk/common/include)
include_directories(fdam/opae-sdk/common/include/opae)
include_directories(fdam/opae-sdk/common/include/opae/cxx)
include_directories(fdam/opae-sdk/common/include/opae/cxx/core)
include_directories(fdam/opae-sdk/common/include/safe_string)
include_directories(fdam/opae-sdk/libopae/src)
include_directories(fdam/opae-sdk/libopae/src/usrclk)
include_directories(fdam/opae-sdk/mybuild)
include_directories(fdam/opae-sdk/mybuild/ase)
include_directories(fdam/opae-sdk/mybuild/ase/api)
include_directories(fdam/opae-sdk/mybuild/ase/api/include)
include_directories(fdam/opae-sdk/mybuild/include)
include_directories(fdam/opae-sdk/mybuild/include/opae)
include_directories(fdam/opae-sdk/mybuild/include/opae/cxx)
include_directories(fdam/opae-sdk/mybuild/include/opae/cxx/core)
include_directories(fdam/opae-sdk/mybuild/include/safe_string)
include_directories(fdam/opae-sdk/mybuild/libopae)
include_directories(fdam/opae-sdk/mybuild/libopae/include)
include_directories(fdam/opae-sdk/mybuild/libopae++)
include_directories(fdam/opae-sdk/mybuild/libopae++/include)
include_directories(fdam/opae-sdk/safe_string)
include_directories(fdam/opae-sdk/tests)
include_directories(fdam/opae-sdk/tests/sys/utils)
include_directories(fdam/opae-sdk/tools/base/fpgaconf)
include_directories(fdam/opae-sdk/tools/base/fpgad)
include_directories(fdam/opae-sdk/tools/extra/c++utils)
include_directories(fdam/opae-sdk/tools/extra/fpgabist/dma)
include_directories(fdam/opae-sdk/tools/extra/fpgadiag)
include_directories(fdam/opae-sdk/tools/extra/fpgadiag/fpga_app)
include_directories(fdam/opae-sdk/tools/extra/hssi)
include_directories(fdam/opae-sdk/tools/extra/libopae++)
include_directories(fdam/opae-sdk/tools/extra/mmlink)
include_directories(fdam/samples/IOtest/sw/cpp/include)
include_directories(fdam/samples/loopback/sw/cpp/include)
include_directories(fdam/samples/md5/sw/cpp/include)
include_directories(fdam/samples/sum/sw/cpp/include)
include_directories(fdam/sw/cpp/include)
include_directories(fdam/sw/cpp/include/fdam)
include_directories(fdam/sw/cpp/include/fdam/acc)
include_directories(hw/template/sw/include)
include_directories(installation/include)
include_directories(installation/include/fdam)
include_directories(installation/include/fdam/acc)
include_directories(installation/include/json)
include_directories(installation/include/opae)
include_directories(installation/include/opae/cxx)
include_directories(installation/include/opae/cxx/core)
include_directories(installation/include/opae/mpf)
include_directories(installation/include/opae/mpf/cxx)
include_directories(installation/include/safe_string)
include_directories(installation/share/opae/ase/sw)
include_directories(jsoncpp/include)
include_directories(jsoncpp/include/json)
include_directories(jsoncpp/src/lib_json)
include_directories(jsoncpp/src/test_lib_json)
include_directories(samples/cgra_128_8_16/hw/sim/afu_sim)
include_directories(samples/cgra_128_8_16/hw/sim/afu_sim/csrc)
include_directories(samples/cgra_128_8_16/hw/sim/afu_sim/sw)
include_directories(samples/cgra_128_8_16/sw/Chebyshev)
include_directories(samples/cgra_128_8_16/sw/Fir)
include_directories(samples/cgra_128_8_16/sw/Kmeans)
include_directories(samples/cgra_128_8_16/sw/Loopback)
include_directories(samples/cgra_128_8_16/sw/Mibench)
include_directories(samples/cgra_128_8_16/sw/Paeth)
include_directories(samples/cgra_128_8_16/sw/Poly5)
include_directories(samples/cgra_128_8_16/sw/Poly6)
include_directories(samples/cgra_128_8_16/sw/Poly8)
include_directories(samples/cgra_128_8_16/sw/Qspline)
include_directories(samples/cgra_128_8_16/sw/Sgfilter)
include_directories(samples/cgra_128_8_16/sw/SobelFilter)
include_directories(samples/cgra_4_1_32/hw/sim/afu_sim)
include_directories(samples/cgra_4_1_32/hw/sim/afu_sim/csrc)
include_directories(samples/cgra_4_1_32/hw/sim/afu_sim/sw)
include_directories(samples/cgra_4_1_32/sw/include)
include_directories(sw/include)
include_directories(sw/include/ready)

add_executable(ready
        fdam/hw/template/sw/cpp/include/main.h
        fdam/hw/template/sw/cpp/src/main.cpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/base/sw/opae_svc_wrapper.cpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/base/sw/opae_svc_wrapper.h
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib/gemmALIVTP.hpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib/gemmHelper.cpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib/gemmHelper.hpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib/gemmLib.cpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib/gemmLib.hpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib/gemmRunner.cpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib/gemmRunner.hpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/lib/opaeMPFGEMM.hpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/sample/gemm.cpp
        fdam/intel-fpga-bbb/BBB_cci_gemm/sw/sample/gemm.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/hw/rtl/cci-if/ccip_feature_list.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/aalsdk/mpf/config.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/aalsdk/mpf/IMPF.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/aalsdk/mpf/MPFService.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/cxx/mpf_handle.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/cxx/mpf_shared_buffer.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/cci_mpf_csrs.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/connect.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/csrs.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/mpf.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/shim_latency_qos.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/shim_pwrite.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/shim_vc_map.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/shim_vtp.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/shim_wro.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/include/opae/mpf/types.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/connect.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/csrs.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/mpf_internal.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/mpf_os.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/mpf_os.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/shim_latency_qos.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/shim_pwrite.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/shim_vc_map.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/shim_vtp.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/shim_vtp_internal.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/shim_vtp_pt.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/shim_vtp_pt.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf/shim_wro.c
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf++/mpf_handle.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src/libmpf++/mpf_shared_buffer.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_service.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_service.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_latency_qos.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_latency_qos.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_pwrite.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_pwrite.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_vc_map.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_vc_map.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_vtp.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_vtp.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_vtp_pt.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_vtp_pt.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_wro.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/sw/src_aal/cci_mpf_shim_wro.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/base/sw/cci_test.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/base/sw/cci_test_main.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/base/sw/opae_svc_wrapper.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/base/sw/opae_svc_wrapper.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_cci_mpf_null/sw/test_cci_mpf_null.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_cci_mpf_null/sw/test_cci_mpf_null.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_mem_perf/sw/compute_latency_qos_params.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_mem_perf/sw/compute_vc_map_params.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_mem_perf/sw/test_mem_latency.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_mem_perf/sw/test_mem_perf.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_mem_perf/sw/test_mem_perf.h
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_mem_perf/sw/test_mem_perf_common.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_random/sw/test_random.cpp
        fdam/intel-fpga-bbb/BBB_cci_mpf/test/test-mpf/test_random/sw/test_random.h
        fdam/intel-fpga-bbb/BBB_ccip_mux/samples/sw/hello_fpga_mux.c
        fdam/intel-fpga-bbb/samples/tutorial/01_hello_world/sw/cci_hello.c
        fdam/intel-fpga-bbb/samples/tutorial/02_hello_world_mpf/sw/cci_mpf_hello.cpp
        fdam/intel-fpga-bbb/samples/tutorial/03_linked_list/sw/linked_list.cpp
        fdam/intel-fpga-bbb/samples/tutorial/04_linked_list_cci/sw/linked_list.cpp
        fdam/intel-fpga-bbb/samples/tutorial/base/sw/csr_mgr.h
        fdam/intel-fpga-bbb/samples/tutorial/base/sw/opae_svc_wrapper.cpp
        fdam/intel-fpga-bbb/samples/tutorial/base/sw/opae_svc_wrapper.h
        fdam/opae-sdk/ase/api/src/buffer.c
        fdam/opae-sdk/ase/api/src/close.c
        fdam/opae-sdk/ase/api/src/common.c
        fdam/opae-sdk/ase/api/src/common_int.h
        fdam/opae-sdk/ase/api/src/enum.c
        fdam/opae-sdk/ase/api/src/event.c
        fdam/opae-sdk/ase/api/src/manage.c
        fdam/opae-sdk/ase/api/src/mmio.c
        fdam/opae-sdk/ase/api/src/open.c
        fdam/opae-sdk/ase/api/src/properties_int.h
        fdam/opae-sdk/ase/api/src/reconf.c
        fdam/opae-sdk/ase/api/src/token.h
        fdam/opae-sdk/ase/api/src/types_int.h
        fdam/opae-sdk/ase/api/src/umsg.c
        fdam/opae-sdk/ase/api/src/version.c
        fdam/opae-sdk/ase/sw/app_backend.c
        fdam/opae-sdk/ase/sw/ase_common.h
        fdam/opae-sdk/ase/sw/ase_ops.c
        fdam/opae-sdk/ase/sw/ase_strings.c
        fdam/opae-sdk/ase/sw/error_report.c
        fdam/opae-sdk/ase/sw/ipc_mgmt_ops.c
        fdam/opae-sdk/ase/sw/linked_list_ops.c
        fdam/opae-sdk/ase/sw/mem_model.c
        fdam/opae-sdk/ase/sw/mqueue_ops.c
        fdam/opae-sdk/ase/sw/protocol_backend.c
        fdam/opae-sdk/ase/sw/randomness_control.c
        fdam/opae-sdk/ase/sw/tstamp_ops.c
        fdam/opae-sdk/common/include/opae/cxx/core/events.h
        fdam/opae-sdk/common/include/opae/cxx/core/except.h
        fdam/opae-sdk/common/include/opae/cxx/core/handle.h
        fdam/opae-sdk/common/include/opae/cxx/core/properties.h
        fdam/opae-sdk/common/include/opae/cxx/core/pvalue.h
        fdam/opae-sdk/common/include/opae/cxx/core/shared_buffer.h
        fdam/opae-sdk/common/include/opae/cxx/core/token.h
        fdam/opae-sdk/common/include/opae/cxx/core/version.h
        fdam/opae-sdk/common/include/opae/access.h
        fdam/opae-sdk/common/include/opae/buffer.h
        fdam/opae-sdk/common/include/opae/enum.h
        fdam/opae-sdk/common/include/opae/event.h
        fdam/opae-sdk/common/include/opae/fpga.h
        fdam/opae-sdk/common/include/opae/manage.h
        fdam/opae-sdk/common/include/opae/mmio.h
        fdam/opae-sdk/common/include/opae/properties.h
        fdam/opae-sdk/common/include/opae/types.h
        fdam/opae-sdk/common/include/opae/types_enum.h
        fdam/opae-sdk/common/include/opae/umsg.h
        fdam/opae-sdk/common/include/opae/utils.h
        fdam/opae-sdk/common/include/opae/version.h
        fdam/opae-sdk/common/include/safe_string/safe_string.h
        fdam/opae-sdk/libopae/src/usrclk/user_clk_pgm_uclock.c
        fdam/opae-sdk/libopae/src/usrclk/user_clk_pgm_uclock.h
        fdam/opae-sdk/libopae/src/usrclk/user_clk_pgm_uclock_eror_messages.h
        fdam/opae-sdk/libopae/src/usrclk/user_clk_pgm_uclock_eror_messages_A.h
        fdam/opae-sdk/libopae/src/usrclk/user_clk_pgm_uclock_eror_messages_D.h
        fdam/opae-sdk/libopae/src/usrclk/user_clk_pgm_uclock_freq_template.h
        fdam/opae-sdk/libopae/src/usrclk/user_clk_pgm_uclock_freq_template_A.h
        fdam/opae-sdk/libopae/src/usrclk/user_clk_pgm_uclock_freq_template_D.h
        fdam/opae-sdk/libopae/src/bitstream.c
        fdam/opae-sdk/libopae/src/bitstream_int.h
        fdam/opae-sdk/libopae/src/buffer.c
        fdam/opae-sdk/libopae/src/close.c
        fdam/opae-sdk/libopae/src/common.c
        fdam/opae-sdk/libopae/src/common_int.h
        fdam/opae-sdk/libopae/src/enum.c
        fdam/opae-sdk/libopae/src/event.c
        fdam/opae-sdk/libopae/src/hostif.c
        fdam/opae-sdk/libopae/src/intel-fpga.h
        fdam/opae-sdk/libopae/src/log.c
        fdam/opae-sdk/libopae/src/log_int.h
        fdam/opae-sdk/libopae/src/manage.c
        fdam/opae-sdk/libopae/src/mmap.c
        fdam/opae-sdk/libopae/src/mmap_int.h
        fdam/opae-sdk/libopae/src/mmio.c
        fdam/opae-sdk/libopae/src/open.c
        fdam/opae-sdk/libopae/src/properties.c
        fdam/opae-sdk/libopae/src/properties_int.h
        fdam/opae-sdk/libopae/src/reconf.c
        fdam/opae-sdk/libopae/src/reconf_int.h
        fdam/opae-sdk/libopae/src/reset.c
        fdam/opae-sdk/libopae/src/sysfs.c
        fdam/opae-sdk/libopae/src/sysfs_int.h
        fdam/opae-sdk/libopae/src/token_list.c
        fdam/opae-sdk/libopae/src/token_list_int.h
        fdam/opae-sdk/libopae/src/types_int.h
        fdam/opae-sdk/libopae/src/umsg.c
        fdam/opae-sdk/libopae/src/version.c
        fdam/opae-sdk/libopae/src/wsid_list.c
        fdam/opae-sdk/libopae/src/wsid_list_int.h
        fdam/opae-sdk/libopae++/samples/hello_fpga-1.cpp
        fdam/opae-sdk/libopae++/src/events.cpp
        fdam/opae-sdk/libopae++/src/except.cpp
        fdam/opae-sdk/libopae++/src/handle.cpp
        fdam/opae-sdk/libopae++/src/properties.cpp
        fdam/opae-sdk/libopae++/src/shared_buffer.cpp
        fdam/opae-sdk/libopae++/src/token.cpp
        fdam/opae-sdk/libopae++/src/version.cpp
        fdam/opae-sdk/mybuild/ase/api/include/config_int.h
        fdam/opae-sdk/mybuild/include/opae/cxx/core/events.h
        fdam/opae-sdk/mybuild/include/opae/cxx/core/except.h
        fdam/opae-sdk/mybuild/include/opae/cxx/core/handle.h
        fdam/opae-sdk/mybuild/include/opae/cxx/core/properties.h
        fdam/opae-sdk/mybuild/include/opae/cxx/core/pvalue.h
        fdam/opae-sdk/mybuild/include/opae/cxx/core/shared_buffer.h
        fdam/opae-sdk/mybuild/include/opae/cxx/core/token.h
        fdam/opae-sdk/mybuild/include/opae/cxx/core/version.h
        fdam/opae-sdk/mybuild/include/opae/access.h
        fdam/opae-sdk/mybuild/include/opae/buffer.h
        fdam/opae-sdk/mybuild/include/opae/enum.h
        fdam/opae-sdk/mybuild/include/opae/event.h
        fdam/opae-sdk/mybuild/include/opae/fpga.h
        fdam/opae-sdk/mybuild/include/opae/manage.h
        fdam/opae-sdk/mybuild/include/opae/mmio.h
        fdam/opae-sdk/mybuild/include/opae/properties.h
        fdam/opae-sdk/mybuild/include/opae/types.h
        fdam/opae-sdk/mybuild/include/opae/types_enum.h
        fdam/opae-sdk/mybuild/include/opae/umsg.h
        fdam/opae-sdk/mybuild/include/opae/utils.h
        fdam/opae-sdk/mybuild/include/opae/version.h
        fdam/opae-sdk/mybuild/include/safe_string/safe_string.h
        fdam/opae-sdk/mybuild/libopae/include/config_int.h
        fdam/opae-sdk/mybuild/libopae++/include/config_int.h
        fdam/opae-sdk/safe_string/abort_handler_s.c
        fdam/opae-sdk/safe_string/ignore_handler_s.c
        fdam/opae-sdk/safe_string/mem_primitives_lib.c
        fdam/opae-sdk/safe_string/mem_primitives_lib.h
        fdam/opae-sdk/safe_string/memcmp16_s.c
        fdam/opae-sdk/safe_string/memcmp32_s.c
        fdam/opae-sdk/safe_string/memcmp_s.c
        fdam/opae-sdk/safe_string/memcpy16_s.c
        fdam/opae-sdk/safe_string/memcpy32_s.c
        fdam/opae-sdk/safe_string/memcpy_s.c
        fdam/opae-sdk/safe_string/memmove16_s.c
        fdam/opae-sdk/safe_string/memmove32_s.c
        fdam/opae-sdk/safe_string/memmove_s.c
        fdam/opae-sdk/safe_string/memset16_s.c
        fdam/opae-sdk/safe_string/memset32_s.c
        fdam/opae-sdk/safe_string/memset_s.c
        fdam/opae-sdk/safe_string/memzero16_s.c
        fdam/opae-sdk/safe_string/memzero32_s.c
        fdam/opae-sdk/safe_string/memzero_s.c
        fdam/opae-sdk/safe_string/safe_mem_constraint.c
        fdam/opae-sdk/safe_string/safe_mem_constraint.h
        fdam/opae-sdk/safe_string/safe_str_constraint.c
        fdam/opae-sdk/safe_string/safe_str_constraint.h
        fdam/opae-sdk/safe_string/safeclib_private.h
        fdam/opae-sdk/safe_string/snprintf_support.c
        fdam/opae-sdk/safe_string/stpcpy_s.c
        fdam/opae-sdk/safe_string/stpncpy_s.c
        fdam/opae-sdk/safe_string/strcasecmp_s.c
        fdam/opae-sdk/safe_string/strcasestr_s.c
        fdam/opae-sdk/safe_string/strcat_s.c
        fdam/opae-sdk/safe_string/strcmp_s.c
        fdam/opae-sdk/safe_string/strcmpfld_s.c
        fdam/opae-sdk/safe_string/strcpy_s.c
        fdam/opae-sdk/safe_string/strcpyfld_s.c
        fdam/opae-sdk/safe_string/strcpyfldin_s.c
        fdam/opae-sdk/safe_string/strcpyfldout_s.c
        fdam/opae-sdk/safe_string/strcspn_s.c
        fdam/opae-sdk/safe_string/strfirstchar_s.c
        fdam/opae-sdk/safe_string/strfirstdiff_s.c
        fdam/opae-sdk/safe_string/strfirstsame_s.c
        fdam/opae-sdk/safe_string/strisalphanumeric_s.c
        fdam/opae-sdk/safe_string/strisascii_s.c
        fdam/opae-sdk/safe_string/strisdigit_s.c
        fdam/opae-sdk/safe_string/strishex_s.c
        fdam/opae-sdk/safe_string/strislowercase_s.c
        fdam/opae-sdk/safe_string/strismixedcase_s.c
        fdam/opae-sdk/safe_string/strispassword_s.c
        fdam/opae-sdk/safe_string/strisuppercase_s.c
        fdam/opae-sdk/safe_string/strlastchar_s.c
        fdam/opae-sdk/safe_string/strlastdiff_s.c
        fdam/opae-sdk/safe_string/strlastsame_s.c
        fdam/opae-sdk/safe_string/strljustify_s.c
        fdam/opae-sdk/safe_string/strncpy_s.c
        fdam/opae-sdk/safe_string/strnlen_s.c
        fdam/opae-sdk/safe_string/strnterminate_s.c
        fdam/opae-sdk/safe_string/strpbrk_s.c
        fdam/opae-sdk/safe_string/strprefix_s.c
        fdam/opae-sdk/safe_string/strremovews_s.c
        fdam/opae-sdk/safe_string/strspn_s.c
        fdam/opae-sdk/safe_string/strstr_s.c
        fdam/opae-sdk/safe_string/strtok_s.c
        fdam/opae-sdk/safe_string/strtolowercase_s.c
        fdam/opae-sdk/safe_string/strtouppercase_s.c
        fdam/opae-sdk/safe_string/strzero_s.c
        fdam/opae-sdk/safe_string/wcpcpy_s.c
        fdam/opae-sdk/safe_string/wcscat_s.c
        fdam/opae-sdk/safe_string/wcscpy_s.c
        fdam/opae-sdk/safe_string/wcsncat_s.c
        fdam/opae-sdk/safe_string/wcsncpy_s.c
        fdam/opae-sdk/safe_string/wcsnlen_s.c
        fdam/opae-sdk/safe_string/wmemcmp_s.c
        fdam/opae-sdk/safe_string/wmemcpy_s.c
        fdam/opae-sdk/safe_string/wmemmove_s.c
        fdam/opae-sdk/safe_string/wmemset_s.c
        fdam/opae-sdk/samples/hello_events.c
        fdam/opae-sdk/samples/hello_fpga.c
        fdam/opae-sdk/tests/function/gtBuffer.cpp
        fdam/opae-sdk/tests/function/gtEnumerate.cpp
        fdam/opae-sdk/tests/function/gtEvent.cpp
        fdam/opae-sdk/tests/function/gtGetProperties.cpp
        fdam/opae-sdk/tests/function/gtHostif.cpp
        fdam/opae-sdk/tests/function/gtMMIO.cpp
        fdam/opae-sdk/tests/function/gtOpenClose.cpp
        fdam/opae-sdk/tests/function/gtReset.cpp
        fdam/opae-sdk/tests/function/gtUmsg.cpp
        fdam/opae-sdk/tests/function/gtVersion.cpp
        fdam/opae-sdk/tests/sys/function/gtBuffer_sys.cpp
        fdam/opae-sdk/tests/sys/function/gtEnumerate_sys.cpp
        fdam/opae-sdk/tests/sys/function/gtMMIO_sys.cpp
        fdam/opae-sdk/tests/sys/function/gtOpenClose_sys.cpp
        fdam/opae-sdk/tests/sys/stress/gtBuf_sys.cpp
        fdam/opae-sdk/tests/sys/stress/gtMMIO_sys.cpp
        fdam/opae-sdk/tests/sys/stress/gtOpen_sys.cpp
        fdam/opae-sdk/tests/sys/stress/gtPerfCounters_sys.cpp
        fdam/opae-sdk/tests/sys/stress/gtPR_sys.cpp
        fdam/opae-sdk/tests/sys/stress/gtRASPower_sys.cpp
        fdam/opae-sdk/tests/sys/utils/common_pr.cpp
        fdam/opae-sdk/tests/sys/utils/common_sys.cpp
        fdam/opae-sdk/tests/sys/utils/common_sys.h
        fdam/opae-sdk/tests/sys/utils/common_sysfs.cpp
        fdam/opae-sdk/tests/sys/utils/common_utils.cpp
        fdam/opae-sdk/tests/sys/utils/common_utils.h
        fdam/opae-sdk/tests/sys/utils/fpgaopen_app.cpp
        fdam/opae-sdk/tests/sys/utils/jsonParser.cpp
        fdam/opae-sdk/tests/sys/utils/log_sys.h
        fdam/opae-sdk/tests/sys/utils/types_sys.h
        fdam/opae-sdk/tests/sys/gtmain_sys.cpp
        fdam/opae-sdk/tests/unit/gtAnyValue.cpp
        fdam/opae-sdk/tests/unit/gtCxxBuffer.cpp
        fdam/opae-sdk/tests/unit/gtCxxEnumerate.cpp
        fdam/opae-sdk/tests/unit/gtCxxEvents.cpp
        fdam/opae-sdk/tests/unit/gtCxxExcept.cpp
        fdam/opae-sdk/tests/unit/gtCxxMMIO.cpp
        fdam/opae-sdk/tests/unit/gtCxxOpenClose.cpp
        fdam/opae-sdk/tests/unit/gtCxxProperties.cpp
        fdam/opae-sdk/tests/unit/gtCxxReset.cpp
        fdam/opae-sdk/tests/unit/gtCxxVersion.cpp
        fdam/opae-sdk/tests/unit/gtEnumerate.cpp
        fdam/opae-sdk/tests/unit/gtOpen.cpp
        fdam/opae-sdk/tests/unit/gtOpenClose_base.cpp
        fdam/opae-sdk/tests/unit/gtOptionParser.cpp
        fdam/opae-sdk/tests/unit/gtProperties_base.cpp
        fdam/opae-sdk/tests/common_test.cpp
        fdam/opae-sdk/tests/common_test.h
        fdam/opae-sdk/tests/gtmain.cpp
        fdam/opae-sdk/tests/jsonParser.cpp
        fdam/opae-sdk/tests/mock.c
        fdam/opae-sdk/tools/base/fpgaconf/bitstream-tools.h
        fdam/opae-sdk/tools/base/fpgaconf/fpgaconf.c
        fdam/opae-sdk/tools/base/fpgad/ap6.c
        fdam/opae-sdk/tools/base/fpgad/ap6.h
        fdam/opae-sdk/tools/base/fpgad/ap_event.c
        fdam/opae-sdk/tools/base/fpgad/ap_event.h
        fdam/opae-sdk/tools/base/fpgad/config_int.h
        fdam/opae-sdk/tools/base/fpgad/daemonize.c
        fdam/opae-sdk/tools/base/fpgad/errtable.c
        fdam/opae-sdk/tools/base/fpgad/errtable.h
        fdam/opae-sdk/tools/base/fpgad/evt.c
        fdam/opae-sdk/tools/base/fpgad/evt.h
        fdam/opae-sdk/tools/base/fpgad/fpgad.c
        fdam/opae-sdk/tools/base/fpgad/log.c
        fdam/opae-sdk/tools/base/fpgad/log.h
        fdam/opae-sdk/tools/base/fpgad/srv.c
        fdam/opae-sdk/tools/base/fpgad/srv.h
        fdam/opae-sdk/tools/base/fpgad/sysfs.c
        fdam/opae-sdk/tools/extra/c++utils/any_value.h
        fdam/opae-sdk/tools/extra/c++utils/choice.h
        fdam/opae-sdk/tools/extra/c++utils/cmd_handler.cpp
        fdam/opae-sdk/tools/extra/c++utils/cmd_handler.h
        fdam/opae-sdk/tools/extra/c++utils/log.cpp
        fdam/opae-sdk/tools/extra/c++utils/log.h
        fdam/opae-sdk/tools/extra/c++utils/option.h
        fdam/opae-sdk/tools/extra/c++utils/option_map.cpp
        fdam/opae-sdk/tools/extra/c++utils/option_map.h
        fdam/opae-sdk/tools/extra/c++utils/option_parser.cpp
        fdam/opae-sdk/tools/extra/c++utils/option_parser.h
        fdam/opae-sdk/tools/extra/c++utils/random_options.h
        fdam/opae-sdk/tools/extra/c++utils/range.h
        fdam/opae-sdk/tools/extra/c++utils/utils.cpp
        fdam/opae-sdk/tools/extra/c++utils/utils.h
        fdam/opae-sdk/tools/extra/coreidle/coreidle.c
        fdam/opae-sdk/tools/extra/coreidle/main.c
        fdam/opae-sdk/tools/extra/fpgabist/bist/bist_afu.c
        fdam/opae-sdk/tools/extra/fpgabist/dma/fpga_dma.c
        fdam/opae-sdk/tools/extra/fpgabist/dma/fpga_dma.h
        fdam/opae-sdk/tools/extra/fpgabist/dma/fpga_dma_internal.h
        fdam/opae-sdk/tools/extra/fpgabist/dma/fpga_dma_test.c
        fdam/opae-sdk/tools/extra/fpgadiag/fpga_app/accelerator_app.h
        fdam/opae-sdk/tools/extra/fpgadiag/fpga_app/accelerator_mux.h
        fdam/opae-sdk/tools/extra/fpgadiag/fpga_app/buffer_pool.h
        fdam/opae-sdk/tools/extra/fpgadiag/fpga_app/error_code.h
        fdam/opae-sdk/tools/extra/fpgadiag/fpga_app/fpga_common.h
        fdam/opae-sdk/tools/extra/fpgadiag/mux.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb.h
        fdam/opae-sdk/tools/extra/fpgadiag/nlb0.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb0.h
        fdam/opae-sdk/tools/extra/fpgadiag/nlb0_main.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb3.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb3.h
        fdam/opae-sdk/tools/extra/fpgadiag/nlb3_main.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb7.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb7.h
        fdam/opae-sdk/tools/extra/fpgadiag/nlb7_main.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb_cache_prime.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb_cache_prime.h
        fdam/opae-sdk/tools/extra/fpgadiag/nlb_stats.cpp
        fdam/opae-sdk/tools/extra/fpgadiag/nlb_stats.h
        fdam/opae-sdk/tools/extra/hssi/accelerator_przone.cpp
        fdam/opae-sdk/tools/extra/hssi/accelerator_przone.h
        fdam/opae-sdk/tools/extra/hssi/config_app.cpp
        fdam/opae-sdk/tools/extra/hssi/config_app.h
        fdam/opae-sdk/tools/extra/hssi/config_main.cpp
        fdam/opae-sdk/tools/extra/hssi/e10.cpp
        fdam/opae-sdk/tools/extra/hssi/e10.h
        fdam/opae-sdk/tools/extra/hssi/e100.cpp
        fdam/opae-sdk/tools/extra/hssi/e100.h
        fdam/opae-sdk/tools/extra/hssi/e40.cpp
        fdam/opae-sdk/tools/extra/hssi/e40.h
        fdam/opae-sdk/tools/extra/hssi/eth_ctrl.cpp
        fdam/opae-sdk/tools/extra/hssi/eth_ctrl.h
        fdam/opae-sdk/tools/extra/hssi/fme.cpp
        fdam/opae-sdk/tools/extra/hssi/fme.h
        fdam/opae-sdk/tools/extra/hssi/hssi.h
        fdam/opae-sdk/tools/extra/hssi/hssi_msg.h
        fdam/opae-sdk/tools/extra/hssi/hssi_przone.cpp
        fdam/opae-sdk/tools/extra/hssi/hssi_przone.h
        fdam/opae-sdk/tools/extra/hssi/i2c.cpp
        fdam/opae-sdk/tools/extra/hssi/i2c.h
        fdam/opae-sdk/tools/extra/hssi/loopback.cpp
        fdam/opae-sdk/tools/extra/hssi/loopback.h
        fdam/opae-sdk/tools/extra/hssi/loopback_app.cpp
        fdam/opae-sdk/tools/extra/hssi/loopback_app.h
        fdam/opae-sdk/tools/extra/hssi/loopback_main.cpp
        fdam/opae-sdk/tools/extra/hssi/mdio.cpp
        fdam/opae-sdk/tools/extra/hssi/mdio.h
        fdam/opae-sdk/tools/extra/hssi/mmio_stream.h
        fdam/opae-sdk/tools/extra/hssi/nios.cpp
        fdam/opae-sdk/tools/extra/hssi/nios.h
        fdam/opae-sdk/tools/extra/hssi/pll.cpp
        fdam/opae-sdk/tools/extra/hssi/pll.h
        fdam/opae-sdk/tools/extra/hssi/przone.h
        fdam/opae-sdk/tools/extra/hssi/xcvr.cpp
        fdam/opae-sdk/tools/extra/hssi/xcvr.h
        fdam/opae-sdk/tools/extra/libopae++/accelerator.cpp
        fdam/opae-sdk/tools/extra/libopae++/accelerator.h
        fdam/opae-sdk/tools/extra/libopae++/csr.h
        fdam/opae-sdk/tools/extra/libopae++/dfh.h
        fdam/opae-sdk/tools/extra/libopae++/dma_buffer.h
        fdam/opae-sdk/tools/extra/libopae++/fpga_errors.cpp
        fdam/opae-sdk/tools/extra/libopae++/fpga_errors.h
        fdam/opae-sdk/tools/extra/libopae++/fpga_event.cpp
        fdam/opae-sdk/tools/extra/libopae++/fpga_event.h
        fdam/opae-sdk/tools/extra/libopae++/fpga_resource.cpp
        fdam/opae-sdk/tools/extra/libopae++/fpga_resource.h
        fdam/opae-sdk/tools/extra/libopae++/mmio.h
        fdam/opae-sdk/tools/extra/libopae++/mmio_resource.cpp
        fdam/opae-sdk/tools/extra/libopae++/mmio_resource.h
        fdam/opae-sdk/tools/extra/libopae++/perf_counters.cpp
        fdam/opae-sdk/tools/extra/libopae++/perf_counters.h
        fdam/opae-sdk/tools/extra/libopae++/property_map.cpp
        fdam/opae-sdk/tools/extra/libopae++/property_map.h
        fdam/opae-sdk/tools/extra/mmlink/main.cpp
        fdam/opae-sdk/tools/extra/mmlink/mm_debug_link_interface.h
        fdam/opae-sdk/tools/extra/mmlink/mm_debug_link_linux.cpp
        fdam/opae-sdk/tools/extra/mmlink/mm_debug_link_linux.h
        fdam/opae-sdk/tools/extra/mmlink/mmlink_connection.cpp
        fdam/opae-sdk/tools/extra/mmlink/mmlink_connection.h
        fdam/opae-sdk/tools/extra/mmlink/mmlink_server.cpp
        fdam/opae-sdk/tools/extra/mmlink/mmlink_server.h
        fdam/opae-sdk/tools/extra/ras/main.c
        fdam/opae-sdk/tools/extra/userclk/main.c
        fdam/samples/IOtest/sw/cpp/include/main.h
        fdam/samples/IOtest/sw/cpp/src/main.cpp
        fdam/samples/loopback/sw/cpp/include/main.h
        fdam/samples/loopback/sw/cpp/src/main.cpp
        fdam/samples/md5/sw/cpp/include/main.h
        fdam/samples/md5/sw/cpp/include/md5.h
        fdam/samples/md5/sw/cpp/src/main.cpp
        fdam/samples/md5/sw/cpp/src/md5.cpp
        fdam/samples/sum/sw/cpp/include/main.h
        fdam/samples/sum/sw/cpp/src/main.cpp
        fdam/sw/cpp/include/fdam/acc/acc_management.h
        fdam/sw/cpp/include/fdam/acc/acc_management_defs.h
        fdam/sw/cpp/include/fdam/acc/accelerator.h
        fdam/sw/cpp/include/fdam/acc/csr_mgr.h
        fdam/sw/cpp/include/fdam/acc/opae_svc_wrapper.h
        fdam/sw/cpp/src/acc/acc_management.cpp
        fdam/sw/cpp/src/acc/accelerator.cpp
        fdam/sw/cpp/src/acc/opae_svc_wrapper.cpp
        fdam/sw/java/mybuild/ase/fdam-aseJAVA_wrap.cxx
        fdam/sw/java/mybuild/harp/fdamJAVA_wrap.cxx
        fdam/sw/java/mybuild/swig/fdam-ase.i
        fdam/sw/java/mybuild/swig/fdam.i
        hw/template/sw/include/main.h
        hw/template/sw/src/main.cpp
        installation/include/fdam/acc/acc_management.h
        installation/include/fdam/acc/acc_management_defs.h
        installation/include/fdam/acc/accelerator.h
        installation/include/fdam/acc/csr_mgr.h
        installation/include/fdam/acc/opae_svc_wrapper.h
        installation/include/json/allocator.h
        installation/include/json/assertions.h
        installation/include/json/config.h
        installation/include/json/forwards.h
        installation/include/json/json.h
        installation/include/json/json_features.h
        installation/include/json/reader.h
        installation/include/json/value.h
        installation/include/json/version.h
        installation/include/json/writer.h
        installation/include/opae/cxx/core/events.h
        installation/include/opae/cxx/core/except.h
        installation/include/opae/cxx/core/handle.h
        installation/include/opae/cxx/core/properties.h
        installation/include/opae/cxx/core/pvalue.h
        installation/include/opae/cxx/core/shared_buffer.h
        installation/include/opae/cxx/core/token.h
        installation/include/opae/cxx/core/version.h
        installation/include/opae/mpf/cxx/mpf_handle.h
        installation/include/opae/mpf/cxx/mpf_shared_buffer.h
        installation/include/opae/mpf/cci_mpf_csrs.h
        installation/include/opae/mpf/connect.h
        installation/include/opae/mpf/csrs.h
        installation/include/opae/mpf/mpf.h
        installation/include/opae/mpf/shim_latency_qos.h
        installation/include/opae/mpf/shim_pwrite.h
        installation/include/opae/mpf/shim_vc_map.h
        installation/include/opae/mpf/shim_vtp.h
        installation/include/opae/mpf/shim_wro.h
        installation/include/opae/mpf/types.h
        installation/include/opae/access.h
        installation/include/opae/buffer.h
        installation/include/opae/enum.h
        installation/include/opae/event.h
        installation/include/opae/fpga.h
        installation/include/opae/manage.h
        installation/include/opae/mmio.h
        installation/include/opae/properties.h
        installation/include/opae/types.h
        installation/include/opae/types_enum.h
        installation/include/opae/umsg.h
        installation/include/opae/utils.h
        installation/include/opae/version.h
        installation/include/safe_string/safe_string.h
        installation/share/opae/ase/sw/app_backend.c
        installation/share/opae/ase/sw/ase_common.h
        installation/share/opae/ase/sw/ase_ops.c
        installation/share/opae/ase/sw/ase_strings.c
        installation/share/opae/ase/sw/error_report.c
        installation/share/opae/ase/sw/ipc_mgmt_ops.c
        installation/share/opae/ase/sw/linked_list_ops.c
        installation/share/opae/ase/sw/mem_model.c
        installation/share/opae/ase/sw/mqueue_ops.c
        installation/share/opae/ase/sw/protocol_backend.c
        installation/share/opae/ase/sw/randomness_control.c
        installation/share/opae/ase/sw/tstamp_ops.c
        installation/src/opae/hello_events.c
        installation/src/opae/hello_fpga.c
        jsoncpp/example/readFromStream/readFromStream.cpp
        jsoncpp/example/readFromString/readFromString.cpp
        jsoncpp/example/streamWrite/streamWrite.cpp
        jsoncpp/example/stringWrite/stringWrite.cpp
        jsoncpp/include/json/allocator.h
        jsoncpp/include/json/assertions.h
        jsoncpp/include/json/config.h
        jsoncpp/include/json/forwards.h
        jsoncpp/include/json/json.h
        jsoncpp/include/json/json_features.h
        jsoncpp/include/json/reader.h
        jsoncpp/include/json/value.h
        jsoncpp/include/json/version.h
        jsoncpp/include/json/writer.h
        jsoncpp/src/jsontestrunner/main.cpp
        jsoncpp/src/lib_json/json_reader.cpp
        jsoncpp/src/lib_json/json_tool.h
        jsoncpp/src/lib_json/json_value.cpp
        jsoncpp/src/lib_json/json_valueiterator.inl
        jsoncpp/src/lib_json/json_writer.cpp
        jsoncpp/src/test_lib_json/fuzz.cpp
        jsoncpp/src/test_lib_json/fuzz.h
        jsoncpp/src/test_lib_json/jsontest.cpp
        jsoncpp/src/test_lib_json/jsontest.h
        jsoncpp/src/test_lib_json/main.cpp
        samples/cgra_128_8_16/hw/sim/afu_sim/csrc/filelist.cu
        samples/cgra_128_8_16/hw/sim/afu_sim/csrc/import_dpic.h
        samples/cgra_128_8_16/hw/sim/afu_sim/csrc/rmapats.c
        samples/cgra_128_8_16/hw/sim/afu_sim/csrc/rmapats.h
        samples/cgra_128_8_16/hw/sim/afu_sim/csrc/rmapats.m
        samples/cgra_128_8_16/hw/sim/afu_sim/csrc/rmar.c
        samples/cgra_128_8_16/hw/sim/afu_sim/csrc/rmar.h
        samples/cgra_128_8_16/hw/sim/afu_sim/csrc/rmar0.h
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/app_backend.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/ase_common.h
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/ase_ops.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/ase_strings.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/error_report.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/ipc_mgmt_ops.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/linked_list_ops.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/mem_model.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/mqueue_ops.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/protocol_backend.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/randomness_control.c
        samples/cgra_128_8_16/hw/sim/afu_sim/sw/tstamp_ops.c
        samples/cgra_128_8_16/hw/sim/afu_sim/work/ase_simv.daidir/vc_hdrs.c
        samples/cgra_128_8_16/hw/sim/afu_sim/vc_hdrs.h
        samples/cgra_128_8_16/sw/Chebyshev/chebyshev.cpp
        samples/cgra_128_8_16/sw/Chebyshev/chebyshev.h
        samples/cgra_128_8_16/sw/Fir/fir.cpp
        samples/cgra_128_8_16/sw/Fir/fir.h
        samples/cgra_128_8_16/sw/Kmeans/kmeans.cpp
        samples/cgra_128_8_16/sw/Kmeans/kmeans.h
        samples/cgra_128_8_16/sw/Loopback/loopback.cpp
        samples/cgra_128_8_16/sw/Loopback/loopback.h
        samples/cgra_128_8_16/sw/Mibench/mibench.cpp
        samples/cgra_128_8_16/sw/Mibench/mibench.h
        samples/cgra_128_8_16/sw/Paeth/paeth.cpp
        samples/cgra_128_8_16/sw/Paeth/paeth.h
        samples/cgra_128_8_16/sw/Poly5/poly5.cpp
        samples/cgra_128_8_16/sw/Poly5/poly5.h
        samples/cgra_128_8_16/sw/Poly6/poly6.cpp
        samples/cgra_128_8_16/sw/Poly6/poly6.h
        samples/cgra_128_8_16/sw/Poly8/poly8.cpp
        samples/cgra_128_8_16/sw/Poly8/poly8.h
        samples/cgra_128_8_16/sw/Qspline/qspline.cpp
        samples/cgra_128_8_16/sw/Qspline/qspline.h
        samples/cgra_128_8_16/sw/Sgfilter/sgfilter.cpp
        samples/cgra_128_8_16/sw/Sgfilter/sgfilter.h
        samples/cgra_128_8_16/sw/SobelFilter/sobel_filter.cpp
        samples/cgra_128_8_16/sw/SobelFilter/sobel_filter.h
        samples/cgra_4_1_32/hw/sim/afu_sim/csrc/filelist.cu
        samples/cgra_4_1_32/hw/sim/afu_sim/csrc/import_dpic.h
        samples/cgra_4_1_32/hw/sim/afu_sim/csrc/rmapats.c
        samples/cgra_4_1_32/hw/sim/afu_sim/csrc/rmapats.h
        samples/cgra_4_1_32/hw/sim/afu_sim/csrc/rmapats.m
        samples/cgra_4_1_32/hw/sim/afu_sim/csrc/rmar.c
        samples/cgra_4_1_32/hw/sim/afu_sim/csrc/rmar.h
        samples/cgra_4_1_32/hw/sim/afu_sim/csrc/rmar0.h
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/app_backend.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/ase_common.h
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/ase_ops.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/ase_strings.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/error_report.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/ipc_mgmt_ops.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/linked_list_ops.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/mem_model.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/mqueue_ops.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/protocol_backend.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/randomness_control.c
        samples/cgra_4_1_32/hw/sim/afu_sim/sw/tstamp_ops.c
        samples/cgra_4_1_32/hw/sim/afu_sim/work/ase_simv.daidir/vc_hdrs.c
        samples/cgra_4_1_32/hw/sim/afu_sim/vc_hdrs.h
        samples/cgra_4_1_32/sw/include/main.h
        samples/cgra_4_1_32/sw/src/main.cpp
        scripts/create_ready_cgra_project.sh
        scripts/install.sh
        scripts/setup.ready
        sw/include/ready/abs.h
        sw/include/ready/add.h
        sw/include/ready/and.h
        sw/include/ready/beq.h
        sw/include/ready/bne.h
        sw/include/ready/cgra.h
        sw/include/ready/cgra_arch.h
        sw/include/ready/cgra_arch_defs.h
        sw/include/ready/cgra_defs.h
        sw/include/ready/data_flow.h
        sw/include/ready/data_flow_defs.h
        sw/include/ready/global.h
        sw/include/ready/input_stream.h
        sw/include/ready/max.h
        sw/include/ready/min.h
        sw/include/ready/mult.h
        sw/include/ready/mux.h
        sw/include/ready/not.h
        sw/include/ready/omega.h
        sw/include/ready/operator.h
        sw/include/ready/operator_factory.h
        sw/include/ready/or.h
        sw/include/ready/output_stream.h
        sw/include/ready/params.h
        sw/include/ready/pass_a.h
        sw/include/ready/pass_b.h
        sw/include/ready/path_finder.h
        sw/include/ready/pe_arch.h
        sw/include/ready/ready.h
        sw/include/ready/scheduler.h
        sw/include/ready/scheduler_defs.h
        sw/include/ready/sgt.h
        sw/include/ready/shl.h
        sw/include/ready/shr.h
        sw/include/ready/slt.h
        sw/include/ready/sub.h
        sw/include/ready/switch.h
        sw/include/ready/xor.h
        sw/src/cgra.cpp
        sw/src/cgra_arch.cpp
        sw/src/data_flow.cpp
        sw/src/global.cpp
        sw/src/omega.cpp
        sw/src/operator.cpp
        sw/src/operator_factory.cpp
        sw/src/path_finder.cpp
        sw/src/pe_arch.cpp
        sw/src/scheduler.cpp
        sw/src/switch.cpp
        README.md)
